force-app/main/default/objects/ListPrice__c/ListPrice__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena dos dados do catalogo de preço, esse objeto será alimentado através de integração com o SAP, o SAP irá manipular os registros através da API padrão do  salesforce.</description>
    
    <label>Catálogo de preço</label>
    <nameField>
        <displayFormat>CAT-{0000}</displayFormat>
        <label>Nome do Catalogo de preço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalogos de preço</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>