force-app/main/default/objects/ListPrice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Catalogos de preço</relationshipLabel>
    <relationshipName>ListPrices</relationshipName>
    <type>Lookup</type>
</CustomField>