force-app/main/default/objects/ListPrice__c/fields/CalculatedInterest__c.field-meta.xml
<CustomField>
    <fullName>CalculatedInterest__c</fullName>
    <description>Formula para calcular a porcentagem unitária já considerando a multiplicidade do SAP.</description>
    <formula>IF(OR(0 == 0, 0 == 0), 1, UnitPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula para calcular a porcentagem unitária já considerando a multiplicidade do SAP.</inlineHelpText>
    <label>Juros Calculado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>