force-app/main/default/objects/ListPrice__c/fields/CalculatedUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CalculatedUnitPrice__c</fullName>
    <description>Formula para calcular o valor unitário já considerando a multiplicidade do SAP.</description>
    <formula>IF(OR(UnitPrice__c == 0, PriceMultiplier__c == 0), 1, UnitPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula para calcular o valor unitário já considerando a multiplicidade do SAP.</inlineHelpText>
    <label>Preço Unitário Calculado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>