force-app/main/default/objects/ListPrice__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <inlineHelpText>Valor utilizado durante o calculo de margem do produto do pedido.</inlineHelpText>
    <label>Custo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>