force-app/main/default/objects/ListPrice__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Catalogos de preço</relationshipLabel>
    <relationshipName>ListPrices</relationshipName>
    <type>Lookup</type>
</CustomField>