force-app/main/default/objects/ListPrice__c/fields/CropExternalId__c.field-meta.xml
<CustomField>
    <fullName>CropExternalId__c</fullName>
    <formula>Crop__r.ExternalId__c</formula>
    <label>Código da Safra</label>
    <type>Text</type>
</CustomField>