force-app/main/default/objects/ListPrice__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Campo que armazena o tipo de moeda utilizada no catalogo de preço, referente ao campo KONP - KONWA no SAP.</description>
    <inlineHelpText>Campo que armazena o tipo de moeda utilizada no catalogo de preço, referente ao campo KONP - KONWA no SAP.</inlineHelpText>
    <label>Moeda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>