force-app/main/default/objects/ListPrice__c/fields/CustomerGroup__c.field-meta.xml
<CustomField>
    <fullName>CustomerGroup__c</fullName>
    <description>Este campo armazena o valor do campo VBKD - KDGRP no SAP.</description>
    <inlineHelpText>Este campo armazena o valor do campo VBKD - KDGRP no SAP.</inlineHelpText>
    <label>Grupo de Clientes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerGroup</valueSetName>
    </valueSet>
</CustomField>