force-app/main/default/objects/ListPrice__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Descrição do catalogo de preço.</description>
    <inlineHelpText>Descrição do catalogo de preço</inlineHelpText>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>