force-app/main/default/objects/ListPrice__c/fields/DescriptionExternalId__c.field-meta.xml
<CustomField>
    <fullName>DescriptionExternalId__c</fullName>
    <formula>
        IF(ISBLANK(SAlesConditionObject__c), '', TEXT(InitialDate__c)+'_')+
        IF(ISBLANK(SAlesConditionObject__c), '', TEXT(EndDate__c)+'_')+
        SalesOrg__c+'_'+Crop__c+'_'+
        IF(ISBLANK(SAlesConditionObject__c), '', SAlesConditionObject__c+'_')+
        IF(ISBLANK(TEXT(Currency__c)), '', TEXT(Currency__c)+'_')+
        IF(ISBLANK(SalesTeam__c), '', SalesTeam__c+'_')+
        IF(ISBLANK(Account__c), '', Account__c+'_')+
        IF(ISBLANK(SalesOffice__c), '', SalesOffice__c+'_')+
        IF(ISBLANK(TEXT(CustomerGroup__c)), '', TEXT(CustomerGroup__c)+'_')+
        IF(ISBLANK(TEXT(ActivitySector__c)), '', TEXT(ActivitySector__c)+'_')+
        IF(ISBLANK(Product2Id__c), '', Product2Id__c)
    </formula>
    <label>DescriptionExternalid</label>
    <type>Text</type>
</CustomField>
    