force-app/main/default/objects/ListPrice__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>Data efetiva do catalogo de preços, recebe o valor do campo KONP - VALDT no SAP.</description>
    <inlineHelpText>Data efetiva do catalogo de preços, recebe o valor do campo KONP - VALDT no SAP.</inlineHelpText>
    <label>Data Efetiva</label>
    <type>Date</type>
</CustomField>