force-app/main/default/objects/ListPrice__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Data da vigência final do Catalogo de preço, este campo armazena os valores KONH - DATBi no SAP.</description>
    <inlineHelpText>Data da vigência final do Catalogo de preço, este campo armazena os valores KONH - DATBi no SAP.</inlineHelpText>
    <label>Data Vigência Fim</label>
    <type>Date</type>
</CustomField>