force-app/main/default/objects/ListPrice__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Campo que identifica o catalogo de preço no SAP.</description>
    <externalId>true</externalId>
    <inlineHelpText>Campo que identifica o catalogo de preço no SAP.</inlineHelpText>
    <label>Código SAP</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>