force-app/main/default/objects/ListPrice__c/fields/InitialDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDate__c</fullName>
    <description>Data da vigência inicial do Catalogo de preço, este campo armazena os valores KONH - DATAB no SAP.</description>
    <inlineHelpText>Data da vigência inicial do Catalogo de preço, este campo armazena os valores KONH - DATAB no SAP.</inlineHelpText>
    <label>Data Vigência Inicial</label>
    <type>Date</type>
</CustomField>