force-app/main/default/objects/ListPrice__c/fields/InterestPriority__c.field-meta.xml
<CustomField>
    <fullName>InterestPriority__c</fullName>
    <description>Um catálogo de preços que possua o campo &quot;produto&quot; preenchido será mais especifico do que os catálogos de preços que tenham apenas a &quot;Família de produtos&quot; preenchida.</description>
    <formula>IF(NOT(IsBlank(SalesOffice__c)), 1000,  0) 
        + IF(NOT(IsBlank(TEXT(Currency__c))), 100, 0) 
        + IF(NOT(IsBlank(Product2Id__c)), 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioridade Juros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>