force-app/main/default/objects/ListPrice__c/fields/InterestValue__c.field-meta.xml
<CustomField>
    <fullName>InterestValue__c</fullName>
    <description>Porcentagem de juros do catalogo de preço, referente ao campo XXXX - XXXX no SAP.</description>
    <inlineHelpText>Porcentagem de juros do catalogo de preço, referente ao campo XXXX - XXXX no SAP.</inlineHelpText>
    <label>Porcentagem Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>