force-app/main/default/objects/ListPrice__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo que informa se o catalogo de preços esta ativo.</description>
    <inlineHelpText>Campo que informa se o catalogo de preços esta ativo.</inlineHelpText>
    <label>Ativo?</label>
    <type>Checkbox</type>
</CustomField>