force-app/main/default/objects/ListPrice__c/fields/ListPriceCode__c.field-meta.xml
<CustomField>
    <fullName>ListPriceCode__c</fullName>
    <label>Código Tabela de Preço</label>
    <length>100</length>
    <type>Text</type>
</CustomField>