force-app/main/default/objects/ListPrice__c/fields/OriginalUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>OriginalUnitPrice__c</fullName>
    <description>Valor Original enviado pelo SAP</description>
    <inlineHelpText>Valor Original enviado pelo SAP</inlineHelpText>
    <label>Valor</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>