force-app/main/default/objects/ListPrice__c/fields/PriceMultiplier__c.field-meta.xml
<CustomField>
    <fullName>PriceMultiplier__c</fullName>
    <description>Campo que armazena a multiplicidade da unidade, referente ao campo KONP - KPEIN no SAP.</description>
    <inlineHelpText>Campo que armazena a multiplicidade da unidade, referente ao campo KONP - KPEIN no SAP.</inlineHelpText>
    <label>Multiplicidade Preço</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>