force-app/main/default/objects/ListPrice__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Formula que verifica a maior especificidade para atribuir o grau de especificidade do registro.</description>
    <formula>IF(NOT(IsPickVal(SalesCondition__c, &quot;&quot;)), 1, 0) 
+ IF(NOT(IsBlank(TEXT(ActivitySector__c))), 10, 0) 
+ IF(NOT(IsBlank(SalesOffice__c)), 100, 0) 
+ IF(NOT(IsBlank(SalesTeam__c)), 1000,  0) 
+ IF(NOT(IsBlank(TEXT(CustomerGroup__c))), 10000, 0) 
+ IF(NOT(IsBlank(Account__c)), 100000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula que verifica a maior especificidade para atribuir o grau de especificidade do registro.</inlineHelpText>
    <label>Prioridade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>