force-app/main/default/objects/ListPrice__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Catalogos de preço</relationshipLabel>
    <relationshipName>ListPrices</relationshipName>
    <type>Lookup</type>
</CustomField>