force-app/main/default/objects/ListPrice__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>Product2Id__r.ExternalId__c</formula>
    <label>Código do Produto</label>
    <type>Text</type>
</CustomField>