force-app/main/default/objects/ListPrice__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Família de produto do catalogo de preço, referente ao campo XXXX - XXXX no SAP.</description>
    <inlineHelpText>Família de produto do catalogo de preço, referente ao campo XXXX - XXXX no SAP.</inlineHelpText>
    <label>Família de Produtos</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Catalogos de preço</relationshipLabel>
    <relationshipName>ListPrices</relationshipName>
    <type>Lookup</type>
</CustomField>