force-app/main/default/objects/ListPrice__c/fields/ProductFamilyId__c.field-meta.xml
<CustomField>
    <fullName>ProductFamilyId__c</fullName>
    <formula>CASESAFEID(Product2Id__r.Family__c)</formula>
    <label>Familia Do Produto</label>
    <type>Text</type>
</CustomField>