force-app/main/default/objects/ListPrice__c/fields/ProductMultiplier__c.field-meta.xml
<CustomField>
    <fullName>ProductMultiplier__c</fullName>
    <formula>IF(Product2Id__r.Multiplicity__c = 0, 1, Product2Id__r.Multiplicity__c)</formula>
    <label>Multiplicidade do Produto</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>