force-app/main/default/objects/ListPrice__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Campo que armazena o escritório de vendas, referente ao campo VBAK - VKBUR no SAP.</description>
    <inlineHelpText>Campo que armazena o escritório de vendas, referente ao campo VBAK - VKBUR no SAP.</inlineHelpText>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Catalogos de preço</relationshipLabel>
    <relationshipName>ListPrices</relationshipName>
    <type>Lookup</type>
</CustomField>