force-app/main/default/objects/ListPrice__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Campo que recebe o valor da organização de vendas, referente ao campo VBKD - PLTYP no SAP.</description>
    <inlineHelpText>Campo que recebe o valor da organização de vendas, referente ao campo VBKD - PLTYP no SAP.</inlineHelpText>
    <label>Organização de Vendas</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Catalogos de preço</relationshipLabel>
    <relationshipName>ListPrices</relationshipName>
    <type>Lookup</type>
</CustomField>