force-app/main/default/objects/ListPrice__c/fields/SalesOrgName__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgName__c</fullName>
    <label>Nome da Organização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>