force-app/main/default/objects/ListPrice__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Campo que armazena a Equipe de vendas, referente ao campo  VBAK - VKGRP no SAP.</description>
    <inlineHelpText>Campo que armazena a Equipe de vendas, referente ao campo  VBAK - VKGRP no SAP.</inlineHelpText>
    <label>Equipe de Vendas</label>
    <referenceTo>SalesTeam__c</referenceTo>
    <relationshipLabel>Catalogos de preço</relationshipLabel>
    <relationshipName>ListPrices</relationshipName>
    <type>Lookup</type>
</CustomField>