force-app/main/default/objects/ListPrice__c/fields/UnitMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitMeasurement__c</fullName>
    <description>Unidade de medida, recebe o valor do campo KONP - KMEIN no SAP.</description>
    <inlineHelpText>Unidade de medida, recebe o valor do campo KONP - KMEIN no SAP.</inlineHelpText>
    <label>Unidade Medida</label>
    <length>3</length>
    <type>Text</type>
</CustomField>