force-app/main/default/objects/ListPrice__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>Valor unitário do produto, referente ao campo KONP - KBETR no SAP.</description>
    <inlineHelpText>Valor unitário do produto, referente ao campo KONP - KBETR no SAP.</inlineHelpText>
    <label>Valor</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>