force-app/main/default/objects/ListPrice__c/recordTypes/PR00.recordType-meta.xml
<RecordType>
    <fullName>PR00</fullName>
    <active>true</active>
    <description>É o tipo de condição referente ao campo KSCHL - CHAR4 no SAP</description>
    <label>PR00 - Tabela de preços</label>
</RecordType>