force-app/main/default/objects/ListPrice__c/recordTypes/ZDJ1.recordType-meta.xml
<RecordType>
    <fullName>ZDJ1</fullName>
    <active>true</active>
    <description>É o tipo de condição referente ao campo KSCHL - CHAR4 no SAP.</description>
    <label>ZDJ1 - Desconto Juros %</label>
</RecordType>