force-app/main/default/objects/ListPrice__c/recordTypes/ZJ01.recordType-meta.xml
<RecordType>
    <fullName>ZJ01</fullName>
    <active>true</active>
    <description>É o tipo de condição referente ao campo KSCHL - CHAR4 no SAP.</description>
    <label>ZJ01 - Juros %</label>
</RecordType>