force-app/main/default/objects/ListPrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId__c</columns>
    <columns>NAME</columns>
    <columns>Product2Id__c</columns>
    <columns>Crop__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>